# sitewalk

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
.claude/skills/asc-feedback/: SKILL.md  asc-feedback.py
.github/workflows/: ci.yml  release.yml
Murmur/Models/: Entry.swift
Murmur/Views/: RootView.swift
Murmur/Views/Home/: AllEntriesView.swift
apps/ios/: .gitignore  README.md  build-ffi.sh  check-bindings.sh  fetch-whisper-model.sh  generate.sh  project-real.yml  project-release.yml  project.local.yml.template  project.yml
apps/ios/Tests/: VocabPackTests.swift
crates/evals/: Cargo.toml
crates/evals/examples/: eval.rs
crates/evals/fixtures/: README.md  deck_walk_contacts.json  deck_walk_contacts.txt  (+6 more)
crates/ffi/: Cargo.toml
crates/ffi/src/: convert.rs  document.rs  document_build.rs  engine.rs  events.rs  items.rs  lib.rs  notes.rs  photos.rs  schemas.rs  session.rs  sessions_read.rs  vocabulary.rs
crates/ffi/tests/: audio_pump_e2e.rs  bridge_e2e.rs
crates/harness/: Cargo.toml
crates/harness/src/: agent.rs  context.rs  error.rs  lib.rs  llm.rs  mock.rs
crates/harness/src/memory/: mod.rs  store.rs  tool.rs
crates/harness/src/providers/: mod.rs
crates/harness/src/reflection/: engine.rs  policy.rs
crates/murmur-core/: Cargo.toml
crates/murmur-core/examples/: walk.rs
crates/murmur-core/src/: coordinator.rs  domain.rs  error.rs  ids.rs  lib.rs  reflection.rs
crates/murmur-core/src/pipeline/: document.rs  live.rs  mod.rs  notes.rs  prompts.rs  tools.rs
crates/murmur-core/src/store/: artifacts.rs  contacts.rs  items.rs  jobs.rs  migrations.rs  mod.rs  photos.rs  schemas.rs  sessions.rs  usage.rs
crates/murmur-core/tests/: anthropic_smoke.rs  live_extraction_e2e.rs  pipeline_e2e.rs  source_swap_e2e.rs
docs/: CORE.md  HANDOFF-ios-ffi.md  HISTORY.md
docs/design/: 2026-07-09-notes-first-output.md  2026-07-12-customizable-paperwork.md  2026-07-16-paperwork-structure-v2-plan.md  BRIEF.md  letterhead-studio-mockup.html  mockup.html  onboarding-mockup.html
docs/plans/: 2026-07-01-rust-core-01-harness-foundation.md  2026-07-02-rust-core-02-memory-reflection-context.md  2026-07-04-rust-core-05b-eval-suite.md  2026-07-04-rust-core-06-spike-stt-benchmark.md  2026-07-04-rust-core-06-stt-crate.md  2026-07-04-rust-core-08-stt-stage2-wiring.md  2026-07-05-rust-core-10-vocabulary-loop.md
docs/research/: 2026-07-08-sitewalk-cluster-competitive.md
docs/reunify/: README.next.md  RUNBOOK.md
docs/specs/: 2026-07-01-murmur-rebuild-vision-design.md
meta/: CANON.md  ROADMAP.md  WORKFLOWS.md
meta/dam/: STATE.md
meta/sac/: STATE.md
spikes/stt-whisper/: .gitignore  Cargo.toml  README.md  RESULTS.md  download-models.sh  shell.nix
spikes/stt-whisper/ios/: README.md
spikes/stt-whisper/src/: main.rs  stream.rs  wer.rs
(+79 files in other folders)
