[package]
name = "murmur-core"
version = "0.1.0"
edition = "2021"

[dependencies]
harness = { path = "../harness" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
